profile and checkout bag showing on small screen problem solved

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,6 +67,15 @@ html {
 .border-black {
     border: 1px solid black !important;
 }
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
+}
 
 /* explore-new-trend-section-css/ index.html from line 31 */
 /* this code is from https://www.goingtointernet.com/2020/08/responsive-e-commerce-product-slider.html */
@@ -122,7 +131,7 @@ a{
 	font-family: poppins;
 	letter-spacing: 0.5px;
 }
-.overlay{
+.overlay-p{
 	position: absolute;
 	left: 50%;
 	top: 50%;
